--- a/nuspec/Cake.IISExpress.nuspec
+++ b/nuspec/Cake.IISExpress.nuspec
@@ -5,8 +5,8 @@
     <version>0.0.0</version>
     <authors>James Nail</authors>
     <owners>James Nail</owners>
-    <description>IIS Express addon for Cake build.</description>
-    <summary>IIS Express addon for Cake build.</summary>
+    <description>IIS Express addin for Cake build.</description>
+    <summary>IIS Express addin for Cake build.</summary>
     <licenseUrl>https://github.com/jrnail23/Cake.IISExpress/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/jrnail23/Cake.IISExpress</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/cake-build/graphics/master/png/cake-medium.png</iconUrl>
@@ -14,7 +14,7 @@
     <copyright>Copyright (c) James Nail 2015</copyright>
     <tags>Cake Script Build IISExpress</tags>
     <dependencies>
-      <dependency id="Cake.Core" version="0.5.3" />
+      <dependency id="Cake.Core" version="0.5.4" />
     </dependencies>
   </metadata>
   <files>
