--- a/nuspec/Cake.IISExpress.nuspec
+++ b/nuspec/Cake.IISExpress.nuspec
@@ -15,6 +15,7 @@
     <tags>Cake Script Build IISExpress</tags>
     <dependencies>
       <dependency id="Cake.Core" version="0.5.4" />
+      <dependency id="Cake.Process" version="0.0.1" />
     </dependencies>
   </metadata>
   <files>
