--- a/src/Cake.IISExpress.Tests/packages.config
+++ b/src/Cake.IISExpress.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoFixture.AutoNSubstitute" version="3.34.0" targetFramework="net45" />
   <package id="AutoFixture.Xunit2" version="3.34.0" targetFramework="net45" />
   <package id="Cake.Core" version="0.5.4" targetFramework="net45" />
+  <package id="Cake.Process" version="0.0.1" targetFramework="net45" />
   <package id="FluentAssertions" version="4.0.0" targetFramework="net45" />
   <package id="NSubstitute" version="1.8.2.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
