--- a/src/Cake.IISExpress/Cake.IISExpress.csproj
+++ b/src/Cake.IISExpress/Cake.IISExpress.csproj
@@ -42,6 +42,10 @@
       <HintPath>..\packages\Cake.Core.0.5.4\lib\net45\Cake.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Cake.Process, Version=0.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Cake.Process.0.0.1\lib\net45\Cake.Process.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
