--- a/tools/packages.config
+++ b/tools/packages.config
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
     <package id="Cake" version="0.5.4" />
-    <package id="xunit.runners" version="1.9.2" />
+    <package id="xunit.runner.console" version="2.0.0" />
 </packages>
